Added menu items and textbox

--- a/TextEditor/TextEditor.vcxproj
+++ b/TextEditor/TextEditor.vcxproj
@@ -18,6 +18,17 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Main.c" />
+    <ClCompile Include="View.c" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="resource.h" />
+    <ClInclude Include="View.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="Resource.rc" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{AB35C40F-C23D-4EA4-BE23-13EB73D2E966}</ProjectGuid>
     <RootNamespace>TextEditor</RootNamespace>
