Added status and tool bar

--- a/TextEditor/TextEditor.vcxproj
+++ b/TextEditor/TextEditor.vcxproj
@@ -30,8 +30,10 @@
     <ResourceCompile Include="Resource.rc" />
   </ItemGroup>
   <ItemGroup>
+    <Image Include="closeBMP.bmp" />
     <Image Include="hIcon.ico" />
     <Image Include="hIconSm.ico" />
+    <Image Include="new_file.bmp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{AB35C40F-C23D-4EA4-BE23-13EB73D2E966}</ProjectGuid>
