--- a/TextEditor/TextEditor.vcxproj.filters
+++ b/TextEditor/TextEditor.vcxproj.filters
@@ -42,5 +42,11 @@
     <Image Include="hIconSm.ico">
       <Filter>Файлы ресурсов</Filter>
     </Image>
+    <Image Include="closeBMP.bmp">
+      <Filter>Файлы ресурсов</Filter>
+    </Image>
+    <Image Include="new_file.bmp">
+      <Filter>Файлы ресурсов</Filter>
+    </Image>
   </ItemGroup>
 </Project>
